# bazel-rules-libevent

./: BUILD.bazel  README.md  libevent.BUILD
bazel/: BUILD.bazel  deps.bzl  libevent.bzl  repos.bzl
bazel/bazel-rules-libevent/: load.bzl
libevent/: BUILD.bazel
