# Configuration settings to make doing selects for different platforms
# easier. More details:
# https://docs.bazel.build/versions/master/configurable-attributes.html#config_settingaliasing
config_setting(
    name = "darwin",
    values = {"cpu": "darwin"},
)

config_setting(
    name = "darwin_x86_64",
    values = {"cpu": "darwin_x86_64"},
)

config_setting(
    name = "darwin_arm64",
    values = {"cpu": "darwin_arm64"},
)

config_setting(
    name = "ios_i386",
    values = {"cpu": "ios_i386"},
)

config_setting(
    name = "ios_x86_64",
    values = {"cpu": "ios_x86_64"},
)

config_setting(
    name = "ios_armv7",
    values = {"cpu": "ios_armv7"},
)

config_setting(
    name = "ios_armv7s",
    values = {"cpu": "ios_armv7s"},
)

config_setting(
    name = "ios_arm64",
    values = {"cpu": "ios_arm64"},
)

config_setting(
    name = "ios_arm64e",
    values = {"cpu": "ios_arm64e"},
)

config_setting(
    name = "linux_x86_64",
    values = {"cpu": "k8"},
)

config_setting(
    name = "linux_aarch64",
    values = {"cpu": "aarch64"},
)

config_setting(
    name = "linux_ppc",
    values = {"cpu": "ppc"},
)

config_setting(
    name = "linux_s390x",
    values = {"cpu": "s390x"},
)

config_setting(
    name = "linux_mips64",
    values = {"cpu": "mips64"},
)

config_setting(
    name = "windows_x86_64",
    values = {"cpu": "x64_windows"},
)

alias(
    name = "apple",
    actual = select(
        {
            ":darwin": ":darwin",
            ":darwin_x86_64": ":darwin_x86_64",
            ":ios_arm64": ":ios_arm64",
            ":ios_arm64e": ":ios_arm64e",
            ":ios_armv7": ":ios_armv7",
            ":ios_armv7s": ":ios_armv7s",
            ":ios_i386": ":ios_i386",
            ":ios_x86_64": ":ios_x86_64",
            # If we're not on an apple platform return a value that
            # will never match in the select() statement calling this
            # since it would have already been matched above.
            "//conditions:default": ":darwin",
        },
    ),
)

alias(
    name = "linux",
    actual = select(
        {
            ":linux_x86_64": ":linux_x86_64",
            ":linux_aarch64": ":linux_aarch64",
            ":linux_ppc": ":linux_ppc",
            ":linux_s390x": "linux_s390x",
            ":linux_mips64": ":linux_mips64",
            # If we're not on an linux platform return a value that
            # will never match in the select() statement calling this
            # since it would have already been matched above.
            "//conditions:default": ":linux_x86_64",
        },
    ),
)

alias(
    name = "x86",
    actual = select(
        {
            ":darwin_x86_64": ":darwin_x86_64",
            ":ios_x86_64": "ios_x86_64",
            "linux_x86_64": "linux_x86_64",
            "windows_x86_64": "windows_x86_64",
            # If we're not on an x86 platform return a value that will
            # never match in the select() statement calling this since
            # it would have already been matched above.
            "//conditions:default": ":darwin_x86_64",
        },
    ),
)
